fix width for mobile

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ var viewer = OpenSeadragon({
 var viewer = OpenSeadragon({
     id:                  'flywing_files_osd',
     prefixUrl:           'static/openseadragon/images/',
-    tileSources:         'dzi/flywing.dzi',
+    tileSources:         'dzi/flywing_files.dzi',
     immediateRender:     'true',
     showNavigator:       'true',
     visibilityRatio:     '1.0',
@@ -87,7 +87,7 @@ var viewer = OpenSeadragon({
 </script>
 </div>
 
-<h4><br><br>created by Mohit Nalavadi</h4>
+<h4><br>created by Mohit Nalavadi</h4>
 
 </body>
 </html>
