--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body>
+<body onload="clickTabOnLoad()">
 <div id="Title">
     <h1>Hyperscope</h1>
     <p>
